tests/ui/borrowck/issue-53432-nested-closure-outlives-borrowed-value.stderr
error: lifetime may not live long enough
  --> $DIR/issue-53432-nested-closure-outlives-borrowed-value.rs:4:9
   |
LL |     let _action = move || {
   |                   -------
   |                   |     |
   |                   |     return type of closure `{closure@$DIR/issue-53432-nested-closure-outlives-borrowed-value.rs:4:9: 4:11}` contains a lifetime `'2`
   |                   lifetime `'1` represents this closure's body
LL |         || f() // The `nested` closure
   |         ^^^^^^ returning this value requires that `'1` must outlive `'2`
   |
   = note: closure implements `Fn`, so references to captured variables can't escape the closure
help: consider adding 'move' keyword before the nested closure
   |
LL |         move || f() // The `nested` closure
   |         ++++

error: aborting due to 1 previous error

